--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "league/oauth2-linkedin",
+    "name": "illuminati0n/oauth2-linkedin",
     "description": "LinkedIn OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
     "license": "MIT",
     "authors": [
@@ -7,6 +7,10 @@
             "name": "Steven Maguire",
             "email": "stevenmaguire@gmail.com",
             "homepage": "https://github.com/stevenmaguire"
+        },
+        {
+            "name": "Ivan Slyusar",
+            "email": "xvanok@gmail.com"
         }
     ],
     "keywords": [
@@ -28,12 +32,12 @@
     },
     "autoload": {
         "psr-4": {
-            "League\\OAuth2\\Client\\": "src/"
+            "illuminati0n\\OAuth2\\Client\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\OAuth2\\Client\\Test\\": "test/src/"
+            "illuminati0n\\OAuth2\\Client\\Test\\": "test/src/"
         }
     },
     "extra": {
